--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "useDefineForClassFields": true,
     "module": "es2022",
     "rootDir": "./",
-    "moduleResolution": "node",
+    "moduleResolution": "NodeNext",
     "baseUrl": "./",
     "paths": {
       "#http/*": ["src/http/*"],
