--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "awilix": "^8.0.1",
     "dotenv": "^16.3.1",
     "find-my-way": "^7.6.2",
+    "nanoid": "^4.0.2",
     "pino": "^8.14.2"
   },
   "devDependencies": {
