--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,7 @@
     "outDir": "./dist",
     "target": "ES2022",
     "module": "ES2022",
+    "sourceMap": true,
     "moduleResolution": "NodeNext",
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
