--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,6 @@
     "skipDefaultLibCheck": true,
     "skipLibCheck": true
   },
-  "include": [ "./src/**/*.ts", "./run.ts", "./test/**/*.ts", "./examples/**/*.ts"],
+  "include": [ "./src/**/*.ts", "./run.ts", "./test/**/*.ts", "./examples/**/*.ts", "benchmark/**/*.ts"],
   "exclude": ["prisma", "node_modules", ".scripts", "dist"]
 }
